Update UserBO to hide confidential details